# SlicerBoneEnhancer

./: .gitignore  CMakeLists.txt  README.md
BoneEnhancerCpp/: CMakeLists.txt  qSlicerBoneEnhancerCppModule.cxx  qSlicerBoneEnhancerCppModule.h  qSlicerBoneEnhancerCppModuleWidget.cxx  qSlicerBoneEnhancerCppModuleWidget.h
BoneEnhancerCpp/Logic/: CMakeLists.txt  vtkSlicerBoneEnhancerCppLogic.cxx  vtkSlicerBoneEnhancerCppLogic.h
BoneEnhancerCpp/Resources/: qSlicerBoneEnhancerCppModule.qrc
BoneEnhancerCpp/Resources/UI/: qSlicerBoneEnhancerCppFooBarWidget.ui  qSlicerBoneEnhancerCppModuleWidget.ui
BoneEnhancerCpp/Widgets/: qSlicerBoneEnhancerCppFooBarWidget.cxx  qSlicerBoneEnhancerCppFooBarWidget.h
BoneEnhancerPy/: BoneEnhancerPy.py  CMakeLists.txt
BoneEnhancerPy/Resources/Icons/: BoneEnhancerCpp.xcf
Data/: 3DUS_Lumbar_Double.nrrd  3DUS_Lumbar_UnChar.nrrd  BP_Lumbar_SingleSlice_Double.mha  BP_Lumbar_SingleSlice_Double.mhd  BP_Lumbar_SingleSlice_Double.zraw  US_Lumbar_SingleSlice_Double.mha  US_Lumbar_SingleSlice_Double.mhd  US_Lumbar_SingleSlice_Double.zraw
Matlab/: FindOptimalPath.asv  FindOptimalPath.m
